[gd_scene load_steps=9 format=3 uid="uid://djamy8yprjwpv"]

[ext_resource type="Script" uid="uid://cx3xjtm8p2gw4" path="res://Scripts/SceneSwitcher.gd" id="1_y7jog"]
[ext_resource type="FontFile" uid="uid://dnm5ocei6qyrh" path="res://Fonts/calamity.ttf" id="2_y7jog"]

[sub_resource type="Animation" id="Animation_344ge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI Layer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI Layer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ynf5e"]
resource_name = "fade_in"
length = 0.533337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI Layer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.2), Color(0, 0, 0, 0.4), Color(0, 0, 0, 0.6), Color(0, 0, 0, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI Layer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.533333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"begin_load_timer"
}]
}

[sub_resource type="Animation" id="Animation_6bp64"]
resource_name = "fade_out"
length = 0.533337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI Layer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.8), Color(0, 0, 0, 0.6), Color(0, 0, 0, 0.4), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI Layer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.533333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_transition"
}]
}

[sub_resource type="Animation" id="Animation_y7jog"]
resource_name = "inbetween"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI Layer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI Layer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ynf5e"]
_data = {
&"RESET": SubResource("Animation_344ge"),
&"fade_in": SubResource("Animation_ynf5e"),
&"fade_out": SubResource("Animation_6bp64"),
&"inbetween": SubResource("Animation_y7jog")
}

[sub_resource type="LabelSettings" id="LabelSettings_344ge"]
font = ExtResource("2_y7jog")
font_size = 64
shadow_size = 0

[node name="SceneSwitcher" type="Node2D"]
script = ExtResource("1_y7jog")
_waitTime = 3.0
_levelName = "Forgotten Forest"
_fullTextTimeOffset = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ynf5e")
}

[node name="LoadTimer" type="Timer" parent="."]
one_shot = true

[node name="UI Layer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI Layer"]
visible = false
z_index = 11
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Forgotten Forest"
label_settings = SubResource("LabelSettings_344ge")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI Layer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="timeout" from="LoadTimer" to="." method="_on_load_timer_timeout"]
